--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://nathanstilwell.com/forrestry-hugo-demo"
 languageCode = "en-us"
 title = "The Showdown"
-theme = "tale"
+theme = "dracula"
